Connect correct ports

--- a/OzricUI/OzricUI.csproj
+++ b/OzricUI/OzricUI.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Z.Blazor.Diagrams" Version="2.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ext" />
+  </ItemGroup>
+
 </Project>
