--- a/OzricEngine/OzricEngine.csproj
+++ b/OzricEngine/OzricEngine.csproj
@@ -5,6 +5,7 @@
         <AssemblyVersion>0.1.0</AssemblyVersion>
         <FileVersion>0.1.0</FileVersion>
         <Company>Showroom Dummies</Company>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
