Lots of nullability fixes to try and reduce the number of warnings

--- a/OzricUI/OzricUI.csproj
+++ b/OzricUI/OzricUI.csproj
@@ -8,10 +8,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OzricEngine\OzricEngine.csproj" />
+    <ProjectReference Include="..\OzricService\OzricService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MudBlazor" Version="6.0.10" />
+    <PackageReference Include="MudBlazor" Version="6.0.11" />
     <PackageReference Include="Z.Blazor.Diagrams" Version="2.1.6" />
   </ItemGroup>
 
