--- a/OzricService/OzricService.csproj
+++ b/OzricService/OzricService.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\OzricEngine\OzricEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.5" />
+  </ItemGroup>
+
 </Project>
