--- a/OzricUI/OzricUI.csproj
+++ b/OzricUI/OzricUI.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.9" />
     <PackageReference Include="MudBlazor" Version="6.0.16" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="Z.Blazor.Diagrams" Version="2.1.6" />
   </ItemGroup>
 
