Increase complexity of tests

--- a/OzricUITests/OzricUITests.csproj
+++ b/OzricUITests/OzricUITests.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\OzricEngineTests\OzricEngineTests.csproj" />
       <ProjectReference Include="..\OzricUI\OzricUI.csproj" />
     </ItemGroup>
 
