--- a/OzricUI/OzricUI.csproj
+++ b/OzricUI/OzricUI.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.9" />
     <PackageReference Include="MudBlazor" Version="6.10.0" />
+    <PackageReference Include="Sentry.AspNetCore" Version="3.40.1" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="Z.Blazor.Diagrams" Version="2.1.6" />
   </ItemGroup>
